// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/IconButton Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r2:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r2:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithAccesskey play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          accesskey="a"
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:rg:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:rg:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          type="button"
          aria-describedby="araiDescId"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:re:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:re:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithAriaExpanded play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          type="button"
          aria-expanded="true"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:rf:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:rf:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlId"
          class="_button_g87u5_1 _button_medium_g87u5_45  dummyClassname"
          lang="nb"
          data-testid="123ID"
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r1:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r1:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithCustomSVGPath smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r4:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r4:">
        dummy tekst accessible name
      </title>
      <path d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithDisabled play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          disabled
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:rb:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:rb:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithDisabledAndOutline smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45 _button_outlined_g87u5_91 "
          disabled
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:rc:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:rc:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:rh:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:rh:">
        dummy tekst accessible name
      </title>
      <path d="M9 3v1H4v2h1v13a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6h1V4h-5V3H9ZM7 6h10v13H7V6Zm2 2v9h2V8H9Zm4 0v9h2V8h-2Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithOutline smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45 _button_outlined_g87u5_91 "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r3:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r3:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          type="button"
          id="dummyIdForwardedFromRef"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r0:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r0:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithSizeExtraSmall smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r5:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r5:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithSizeExtraSmallAndOutline smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r8:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r8:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithSizeLarge smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_large_g87u5_52  "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r7:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r7:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithSizeLargeAndOutline smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_large_g87u5_52 _button_outlined_g87u5_91 "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:ra:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:ra:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithSizeSmall smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_small_g87u5_37  "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r6:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r6:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithSizeSmallAndOutline smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_small_g87u5_37 _button_outlined_g87u5_91 "
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r9:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r9:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/IconButton WithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 marginRightM"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:ri:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:ri:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
    <button class="_button_g87u5_1 _button_small_g87u5_37 _button_outlined_g87u5_91 marginRightM"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rj:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rj:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
    <button class="_button_g87u5_1 _button_medium_g87u5_45 _button_outlined_g87u5_91 marginRightM"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rk:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rk:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
    <button class="_button_g87u5_1 _button_large_g87u5_52 _button_outlined_g87u5_91 "
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rl:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rl:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
  </div>
  <div class="bottomSpacingXL">
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 marginRightM"
            type="button"
    >
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_g87u5_26 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_g87u5_1 _button_small_g87u5_37 _button_outlined_g87u5_91 marginRightM"
            type="button"
    >
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_g87u5_26 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_g87u5_1 _button_medium_g87u5_45 _button_outlined_g87u5_91 marginRightM"
            type="button"
    >
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 _spinner_g87u5_26 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_g87u5_1 _button_large_g87u5_52 _button_outlined_g87u5_91 "
            type="button"
    >
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28 _spinner_g87u5_26 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
  </div>
  <div class="bottomSpacingXL">
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  marginRightM"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rm:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rm:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
    <button class="_button_g87u5_1 _button_small_g87u5_37  marginRightM"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rn:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rn:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
    <button class="_button_g87u5_1 _button_medium_g87u5_45  marginRightM"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:ro:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:ro:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
    <button class="_button_g87u5_1 _button_large_g87u5_52  "
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rp:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rp:">
          dummy tekst accessible name
        </title>
        <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
        </path>
      </svg>
    </button>
  </div>
  <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  marginRightM"
          type="button"
  >
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_g87u5_26 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
  <button class="_button_g87u5_1 _button_small_g87u5_37  marginRightM"
          type="button"
  >
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_g87u5_26 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
  <button class="_button_g87u5_1 _button_medium_g87u5_45  marginRightM"
          type="button"
  >
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 _spinner_g87u5_26 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
  <button class="_button_g87u5_1 _button_large_g87u5_52  "
          type="button"
  >
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28 _spinner_g87u5_26 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
</div>
`;

exports[`Tester/IconButton WithType play-test 1`] = `
<div data-test-block="true">
  <button class="_button_g87u5_1 _button_medium_g87u5_45  "
          type="submit"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:rd:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:rd:">
        dummy tekst accessible name
      </title>
      <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
      </path>
    </svg>
  </button>
</div>
`;
